simple/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webserver
  namespace: do180
  labels:
    app: webserver
  name: webserver
spec:
  host: do180.apps.eu410.prod.nextcle.com
  to:
    kind: Service
    name: webserver
  port:
    targetPort: http
